tests/failures/todo_while_version/invalid_version.rs
use todo_by::todo_while_version;

fn main() {
    todo_while_version!("2024/01/01");
}
